# wtf

./: CONTRIBUTING.md  LICENSE  README.md  architecture.md  go.mod  index.html  install.ps1  install.sh  main.go
.github/workflows/: ci.yml
brew/: wtf.rb
config/: config.go  drives_unix.go  drives_windows.go
indexer/: index.go  walker.go
npm/: README.md  install.js  package.json
pip/: README.md  pyproject.toml
pip/wtf_cli/: __main__.py
search/: match.go  match_test.go
tui/: tui.go
